# oget

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
oget/: __main__.py
