[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oget"
version = "1.0.2"
description = "Ollama Model Direct Downloader & Installer - get direct links and install models offline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ollama", "llm", "model", "download", "ai", "installer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
oget = "oget.__main__:main"

[project.urls]
Homepage = "https://github.com/fr0stb1rd/oget"
Issues = "https://github.com/fr0stb1rd/oget/issues"
